...

            }
        } else if (item === "accept" && this.state.details.acceptedBy === "") {
            return (
                <View style={{marginLeft: '1%', marginRight: '1%'}}>
                    <TouchableOpacity
                        testID="acceptButton"
                        style={{
                            ...styles.boxStyle,
                            borderColor: '#1eaaf1',
                            marginBottom: 3,
                            backgroundColor: '#1eaaf1'
                        }}
                        onPress={() => {
                            Alert.alert(
                                'Alert!',
                                'Are you sure you want to Accept the order?',
                                [
                                    {
                                        text: 'Yes',
                                        onPress: () => {
                                            firebase.database().ref('/requests/' + this.state.details.unikey + "/").update({
                                                acceptedBy: firebase.auth().currentUser.uid,
                                                acceptorName: this.state.acceptorName
                                            });
                                            this.props.navigation.navigate('tabscreen');
...
        const number = this.state.details.phoneNumber;
        Communications.text(number);
    };

    render() {
        return (
            <ScrollView testID="orderDetailsPage">
                {this.retView("item")}
                {this.retView("description")}
                {this.retView("instructions")}
                {this.retView("email")}
                {this.retView("addressField")}
                {this.retView("price")}
                {this.retView("link")}
                <View>
                    <TouchableOpacity onPress={this.openMaps}>
                        <Image
                            testID="map"
                            style={styles.imageStyle}
                            source={{
                                uri: 'https://maps.googleapis.com/maps/api/staticmap?center='
                                    + this.state.details.address + '&zoom=17&scale=2&size=500x500&maptype=roadmap&key='
                                    + this.mapKey + '&format=jpg&visual_refresh=true'
                                    + '&markers=size:mid%7Ccolor:0xff0000%7Clabel:%7C' + this.state.details.address
...
