...
                            this.setState({address: response.val().address});
                            this.setState({addresses: response.val().addresses});

                        });
                }}
                />
                <ScrollView testID="myAccountPage">
                    <View>
                        <TouchableOpacity
                            style={{flex: 1, justifyContent: 'center', alignItems: 'center'}}
                            onPress={this.onImageButtonPressed.bind(this)}>
                            <Image
                                source={{uri: this.state.photoURL}}
...
                                color: 'white'
                            }}>
                                {this.state.buttonEdit}
                            </Text>
                        </Button>
                        <Button
                            testID="signOutButton"
                            style={{...styles.buttonContainedStyle, borderColor: '#f20010', backgroundColor: '#f20010'}}
                            onPress={this.signOut}>
                            <Text style={{
                                textAlign: 'center',
                                fontSize: 20,
                                margin: 3,
...
